# DevOpus

./: .gitignore  .sample_env  README.md  app.py  db.py  devopus_complete_context.md  fix_versions.py  github_utils.py  pyproject.toml  render.yaml  requirements.txt  utils.py
agent/: graph.py  prompts.py  states.py  tools.py
frontend/: .sample_env.local  lint-out.txt  lint-output.txt  lint-results.json  lint.json  lint.txt  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/careers/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/components/: ChatInterface.tsx  CodePreview.tsx  DownloadBtn.tsx  MermaidDiagram.tsx  PinModal.tsx  SmartInput.tsx  SupabaseProvider.tsx  ThemeProvider.tsx  VersionHistorySidebar.tsx
frontend/src/components/blocks/: pricing.tsx
frontend/src/components/ui/: 3d-folder.tsx  animated-hero-card.tsx  animated-hero.css  button.tsx  hero-parallax.tsx  switch.tsx  text-shimmer-wave.tsx  view-toggle.tsx
frontend/src/lib/: storage.ts  supabase.ts
